--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+    gap: 3em;
 }
 
 header {
@@ -81,7 +82,6 @@ header::before {
 header > div:first-child {
     position: relative;
     width: 80%;
-    max-width: 500px;
 }
 
 /*style for header picture and name*/
@@ -121,18 +121,17 @@ img.profile-picture {
     height: 100%;
     width: 100%;
     animation: slide-in-from-left 1s ease-out forwards;
+    box-shadow: grey 2px 2px 4px;
 }
 
 /*about me section*/
 
 header > div:last-child {
     width: 80%;
-    max-width: 500px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     gap: 1.2em;
-
 }
 
 header > div:last-child > h2 {
@@ -153,3 +152,73 @@ nav img {
     width: 40px;
     height: 40px;
 }
+
+/*middle style*/
+
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1em;
+}
+
+main > h2 {
+    justify-self: center;
+    font: 2rem helvetica;
+    width: 80%;
+    text-align: center;
+}
+
+main > div.projects-container {
+    display: grid;
+    justify-content: space-between;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    row-gap: 2em;
+    column-gap: 2em;
+    width: 80%;
+} 
+
+section {
+    display: flex;
+    flex-direction: column;
+    gap: 1.5em;
+    box-shadow: gray 2px 2px 2px;
+    padding-bottom: 2em;
+    transition: transform 300ms ease-in 200ms;
+}
+
+section:hover {
+    transform: scale(1.05, 1.05);
+}
+
+section > div:first-child {
+    width: 100%;
+    min-height: 200px;
+    background: red;
+}
+
+section > div {
+    padding: 0 1em;
+    display: flex;
+    justify-content: space-between;
+}
+
+h4 {
+    font: 1.2rem "helvetica";
+}
+
+.project-links-container {
+    display: flex;
+    gap: 1em;
+}
+
+.project-links-container > a > img {
+    width: 26px;
+    height: 26px;
+}
+
+section > div > a > img {
+    width: 26px;
+    height: 26px;
+}
+
