--- a/style.css
+++ b/style.css
@@ -227,23 +227,23 @@ section > div > a > img {
 
 footer {
     display: flex;
-    flex-flow: column wrap;
+    flex-direction: column;
     gap: 2em;
     justify-content: center;
     align-content: center;
     background-color: aqua;
-    padding-top: 2em;
 }
 
 footer > div.contact-info {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-top: 2em;
 }
 
-div.contact-info > div {
+div.contact-info > div:first-child {
     display: flex;
-    flex-flow: column wrap;
+    flex-direction: column;
     gap: 1em;
     width: 80%;
 }
@@ -265,6 +265,29 @@ address {
     display: flex;
     flex-direction: column;
     gap: 0.5em;
-    font: 0.8rem "helvetica";
+    font: 1rem "helvetica";
 }
 
+.footer-img > img {
+    object-fit: contain;
+    width: 100%;
+    height: 100%;
+}
+
+@media (min-width: 750px) {
+
+    div.contact-info h2 {
+        align-self: stretch;
+    }
+
+    footer {
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .footer-img {
+        padding: 2em;
+        max-width: 500px;
+    }
+}
